{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 144,
  "lineage": "07861c17-de0f-ff67-7216-443e3b39ddc1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_public_subnet_1_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b52166667daf1982",
            "arn": "arn:aws:ec2:eu-central-1:706262411021:elastic-ip/eipalloc-0b52166667daf1982",
            "association_id": "eipassoc-099386cf54e987da1",
            "domain": "vpc",
            "id": "eipalloc-0b52166667daf1982",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0474361f75c7d5a09",
            "private_dns": "ip-10-0-51-224.eu-central-1.compute.internal",
            "private_ip": "10.0.51.224",
            "public_dns": "ec2-18-184-176-29.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.176.29",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC/PublicSubnet1/ElasticIP"
            },
            "tags_all": {
              "Name": "VPC/PublicSubnet1/ElasticIP"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_public_subnet_2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e9302b128738b9e",
            "arn": "arn:aws:ec2:eu-central-1:706262411021:elastic-ip/eipalloc-03e9302b128738b9e",
            "association_id": "eipassoc-0258031e09fdd881e",
            "domain": "vpc",
            "id": "eipalloc-03e9302b128738b9e",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0cc5ee12ebf4d7c4b",
            "private_dns": "ip-10-0-94-247.eu-central-1.compute.internal",
            "private_ip": "10.0.94.247",
            "public_dns": "ec2-63-176-128-0.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.176.128.0",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC/PublicSubnet2/ElasticIP"
            },
            "tags_all": {
              "Name": "VPC/PublicSubnet2/ElasticIP"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:internet-gateway/igw-0aa3618cae3650fdb",
            "id": "igw-0aa3618cae3650fdb",
            "owner_id": "706262411021",
            "region": "eu-central-1",
            "tags": {
              "Name": "AWS internal services VPC Internet Gateway"
            },
            "tags_all": {
              "Name": "AWS internal services VPC Internet Gateway"
            },
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:loadbalancer/app/application-lb/6d79e621bba7ee97",
            "arn_suffix": "app/application-lb/6d79e621bba7ee97",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-lb-2058864842.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:loadbalancer/app/application-lb/6d79e621bba7ee97",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-lb",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-018d60a0e39f192dc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d274354ac2ac8a9"
              },
              {
                "subnet_id": "subnet-0e8d49f73042bdb3b"
              }
            ],
            "subnets": [
              "subnet-04d274354ac2ac8a9",
              "subnet-0e8d49f73042bdb3b"
            ],
            "tags": {
              "Name": "ALB"
            },
            "tags_all": {
              "Name": "ALB"
            },
            "vpc_id": "vpc-0395f6f0f137154da",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:loadbalancer/app/application-lb/6d79e621bba7ee97"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.vpc_public_subnet_1",
            "aws_subnet.vpc_public_subnet_2",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:listener/app/application-lb/6d79e621bba7ee97/7326e800894cc7fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:targetgroup/alb-tg/57e2a3c92a064214",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:listener/app/application-lb/6d79e621bba7ee97/7326e800894cc7fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:loadbalancer/app/application-lb/6d79e621bba7ee97",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:listener/app/application-lb/6d79e621bba7ee97/7326e800894cc7fc"
          },
          "dependencies": [
            "aws_lb.application_lb",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.vpc_public_subnet_1",
            "aws_subnet.vpc_public_subnet_2",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:targetgroup/alb-tg/57e2a3c92a064214",
            "arn_suffix": "targetgroup/alb-tg/57e2a3c92a064214",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:targetgroup/alb-tg/57e2a3c92a064214",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:706262411021:loadbalancer/app/application-lb/6d79e621bba7ee97"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ALB/TargetGroup"
            },
            "tags_all": {
              "Name": "ALB/TargetGroup"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:706262411021:targetgroup/alb-tg/57e2a3c92a064214"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_public_subnet_1_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b52166667daf1982",
            "association_id": "eipassoc-099386cf54e987da1",
            "connectivity_type": "public",
            "id": "nat-05af97ccf6f3e13bf",
            "network_interface_id": "eni-0474361f75c7d5a09",
            "private_ip": "10.0.51.224",
            "public_ip": "18.184.176.29",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d274354ac2ac8a9",
            "tags": {
              "Name": "VPC/PublicSubnet1/NATGateway"
            },
            "tags_all": {
              "Name": "VPC/PublicSubnet1/NATGateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vpc_public_subnet_1_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_subnet.vpc_public_subnet_1",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_public_subnet_2_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e9302b128738b9e",
            "association_id": "eipassoc-0258031e09fdd881e",
            "connectivity_type": "public",
            "id": "nat-03097e2dd155b3ba3",
            "network_interface_id": "eni-0cc5ee12ebf4d7c4b",
            "private_ip": "10.0.94.247",
            "public_ip": "63.176.128.0",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e8d49f73042bdb3b",
            "tags": {
              "Name": "VPC/PublicSubnet2/NATGateway"
            },
            "tags_all": {
              "Name": "VPC/PublicSubnet2/NATGateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vpc_public_subnet_2_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_subnet.vpc_public_subnet_2",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_private_subnet_1_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ab25db26cc09f0f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05af97ccf6f3e13bf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0ab25db26cc09f0f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0ab25db26cc09f0f1"
          },
          "dependencies": [
            "aws_eip.vpc_public_subnet_1_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_nat_gateway.vpc_public_subnet_1_nat_gateway",
            "aws_route_table.vpc_private_subnet_1_route_table",
            "aws_subnet.vpc_public_subnet_1",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_private_subnet_2_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-047e19b766d20917b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03097e2dd155b3ba3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-047e19b766d20917b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-047e19b766d20917b"
          },
          "dependencies": [
            "aws_eip.vpc_public_subnet_2_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_nat_gateway.vpc_public_subnet_2_nat_gateway",
            "aws_route_table.vpc_private_subnet_2_route_table",
            "aws_subnet.vpc_public_subnet_2",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_public_subnet_1_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa3618cae3650fdb",
            "id": "r-rtb-007c0b749fc7642511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-007c0b749fc764251",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-007c0b749fc764251"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.vpc_public_subnet_1_route_table",
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_public_subnet_2_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa3618cae3650fdb",
            "id": "r-rtb-070a4ea2bcf370fdf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-070a4ea2bcf370fdf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-070a4ea2bcf370fdf"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.vpc_public_subnet_2_route_table",
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_private_subnet_1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:route-table/rtb-0ab25db26cc09f0f1",
            "id": "rtb-0ab25db26cc09f0f1",
            "owner_id": "706262411021",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05af97ccf6f3e13bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC/PrivateSubnet1/RouteTable"
            },
            "tags_all": {
              "Name": "VPC/PrivateSubnet1/RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "rtb-0ab25db26cc09f0f1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_private_subnet_2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:route-table/rtb-047e19b766d20917b",
            "id": "rtb-047e19b766d20917b",
            "owner_id": "706262411021",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03097e2dd155b3ba3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC/PrivateSubnet2/RouteTable"
            },
            "tags_all": {
              "Name": "VPC/PrivateSubnet2/RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "rtb-047e19b766d20917b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public_subnet_1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:route-table/rtb-007c0b749fc764251",
            "id": "rtb-007c0b749fc764251",
            "owner_id": "706262411021",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa3618cae3650fdb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC/PublicSubnet1/RouteTable"
            },
            "tags_all": {
              "Name": "VPC/PublicSubnet1/RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "rtb-007c0b749fc764251",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public_subnet_2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:route-table/rtb-070a4ea2bcf370fdf",
            "id": "rtb-070a4ea2bcf370fdf",
            "owner_id": "706262411021",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa3618cae3650fdb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC/PublicSubnet2/RouteTable"
            },
            "tags_all": {
              "Name": "VPC/PublicSubnet2/RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "rtb-070a4ea2bcf370fdf",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_private_subnet_1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00094f02165089388",
            "region": "eu-central-1",
            "route_table_id": "rtb-0ab25db26cc09f0f1",
            "subnet_id": "subnet-0e735d5507f9276e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_private_subnet_1_route_table",
            "aws_subnet.vpc_private_subnet_1",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_private_subnet_2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3d26da49973b38e",
            "region": "eu-central-1",
            "route_table_id": "rtb-047e19b766d20917b",
            "subnet_id": "subnet-005cc2c715682e63d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_private_subnet_2_route_table",
            "aws_subnet.vpc_private_subnet_2",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_public_subnet_1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0778804dd3e13e888",
            "region": "eu-central-1",
            "route_table_id": "rtb-007c0b749fc764251",
            "subnet_id": "subnet-04d274354ac2ac8a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_public_subnet_1_route_table",
            "aws_subnet.vpc_public_subnet_1",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_public_subnet_2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c1dd10bcd9a4e13",
            "region": "eu-central-1",
            "route_table_id": "rtb-070a4ea2bcf370fdf",
            "subnet_id": "subnet-0e8d49f73042bdb3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_public_subnet_2_route_table",
            "aws_subnet.vpc_public_subnet_2",
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:security-group/sg-018d60a0e39f192dc",
            "description": "Security group for the ALB",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Load balancer to target",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f3c6907447c3424"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-018d60a0e39f192dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow from anyone on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group-alb-20250921173836805600000003",
            "name_prefix": "security-group-alb-",
            "owner_id": "706262411021",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB/SecurityGroup"
            },
            "tags_all": {
              "Name": "ALB/SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "sg-018d60a0e39f192dc",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:security-group/sg-08f3c6907447c3424",
            "description": "Security group for the ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic by default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f3c6907447c3424",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Load balancer to target",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018d60a0e39f192dc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group-ecs-20250921173837525600000004",
            "name_prefix": "security-group-ecs-",
            "owner_id": "706262411021",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS/SecurityGroup"
            },
            "tags_all": {
              "Name": "ECS/SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "sg-08f3c6907447c3424",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:security-group/sg-097569abbc091b1db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Redis to respond to any request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097569abbc091b1db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f3c6907447c3424"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "706262411021",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "sg-097569abbc091b1db",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Load balancer to target",
            "from_port": 80,
            "id": "sgrule-2465546419",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-018d60a0e39f192dc",
            "security_group_rule_id": "sgr-0f8788b8a60968378",
            "self": false,
            "source_security_group_id": "sg-08f3c6907447c3424",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.ecs_security_group",
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Load balancer to target",
            "from_port": 80,
            "id": "sgrule-3982217314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-08f3c6907447c3424",
            "security_group_rule_id": "sgr-057b93e76bb55a942",
            "self": false,
            "source_security_group_id": "sg-018d60a0e39f192dc",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.ecs_security_group",
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_to_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ECS to connect to Redis",
            "from_port": 6379,
            "id": "sgrule-1492122993",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-08f3c6907447c3424",
            "security_group_rule_id": "sgr-0e290d0de6bc1734e",
            "self": false,
            "source_security_group_id": "sg-097569abbc091b1db",
            "timeouts": null,
            "to_port": 6379,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_security_group",
            "aws_security_group.redis_sg",
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_egress_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow Redis to respond to any request",
            "from_port": 0,
            "id": "sgrule-2063258832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-central-1",
            "security_group_id": "sg-097569abbc091b1db",
            "security_group_rule_id": "sgr-0176a8b112c5a3522",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.redis_sg",
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_ingress_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6379,
            "id": "sgrule-1900003712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-097569abbc091b1db",
            "security_group_rule_id": "sgr-039abdb78c04e77c0",
            "self": false,
            "source_security_group_id": "sg-08f3c6907447c3424",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_security_group",
            "aws_security_group.redis_sg",
            "aws_vpc.my_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:subnet/subnet-0e735d5507f9276e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e735d5507f9276e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706262411021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC/PrivateSubnet1",
              "aws-tutorial:subnet-name": "Private",
              "aws-tutorial:subnet-type": "Private"
            },
            "tags_all": {
              "Name": "VPC/PrivateSubnet1",
              "aws-tutorial:subnet-name": "Private",
              "aws-tutorial:subnet-type": "Private"
            },
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "subnet-0e735d5507f9276e4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:subnet/subnet-005cc2c715682e63d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005cc2c715682e63d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706262411021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC/PrivateSubnet2",
              "aws-tutorial:subnet-name": "Private",
              "aws-tutorial:subnet-type": "Private"
            },
            "tags_all": {
              "Name": "VPC/PrivateSubnet2",
              "aws-tutorial:subnet-name": "Private",
              "aws-tutorial:subnet-type": "Private"
            },
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "subnet-005cc2c715682e63d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:subnet/subnet-04d274354ac2ac8a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d274354ac2ac8a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706262411021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC/PublicSubnet1",
              "aws-tutorial:subnet-name": "Public",
              "aws-tutorial:subnet-type": "Public"
            },
            "tags_all": {
              "Name": "VPC/PublicSubnet1",
              "aws-tutorial:subnet-name": "Public",
              "aws-tutorial:subnet-type": "Public"
            },
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "subnet-04d274354ac2ac8a9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:subnet/subnet-0e8d49f73042bdb3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8d49f73042bdb3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706262411021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC/PublicSubnet2",
              "aws-tutorial:subnet-name": "Public",
              "aws-tutorial:subnet-type": "Public"
            },
            "tags_all": {
              "Name": "VPC/PublicSubnet2",
              "aws-tutorial:subnet-name": "Public",
              "aws-tutorial:subnet-type": "Public"
            },
            "vpc_id": "vpc-0395f6f0f137154da"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "706262411021",
            "id": "subnet-0e8d49f73042bdb3b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.my_aws_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:706262411021:vpc/vpc-0395f6f0f137154da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0570305d44c5fc611",
            "default_route_table_id": "rtb-0ec859fe554dd91f2",
            "default_security_group_id": "sg-0a496d7928189484d",
            "dhcp_options_id": "dopt-07d8af77f9dd956cc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0395f6f0f137154da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec859fe554dd91f2",
            "owner_id": "706262411021",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC network for internal services to communicate securely"
            },
            "tags_all": {
              "Name": "VPC network for internal services to communicate securely"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}